# ax_3rd_trial

./: .gitignore  Cargo.toml  Vagrantfile
data/: setup_postgres.sh
examples/: ref_vec.rs  scrape.rs
spec/: request.http
src/: auth.rs  main.rs
src/auth/: handlers.rs  mod.rs
vite-project/: package-lock.json  package.json  tsconfig.json  vite.config.ts
vite-project/src/: App.vue  main.ts  style.css  websocket.ts
vite-project/src/components/: CreateUser.vue  LoginForm.vue
